@startuml

title __MACMONAGLEDANIEL's Class Diagram__\n

  namespace  {
    class AddCarGUI {
    }
  }
  

  namespace  {
    class Car {
    }
  }
  

  namespace  {
    class Customer {
    }
  }
  

  namespace  {
    class CustomerGUI {
    }
  }
  

  namespace  {
    class LogIn {
    }
  }
  

  namespace  {
    class MainMenu {
    }
  }
  

  namespace  {
    class SellCarGUI {
    }
  }
  

  namespace  {
    class Transaction {
    }
  }
  

  namespace  {
    class TransactionGUI {
    }
  }
  

  AddCarGUI -up-|> javax.swing.JFrame
  Car .up.|> java.io.Serializable
  CustomerGUI -up-|> javax.swing.JFrame
  SellCarGUI -up-|> javax.swing.JFrame
  TransactionGUI -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
